Fixing dark mode

--- a/styles/explore.css
+++ b/styles/explore.css
@@ -85,7 +85,7 @@ figcaption p {
 }
 
 @media (prefers-color-scheme: dark) {
-	main {
+	body {
 		background-color: var(--color-violet-dark-black);
 	}
 
