--- a/styles/login.css
+++ b/styles/login.css
@@ -296,7 +296,7 @@ a:hover {
 }
 
 @media (prefers-color-scheme: dark) {
-	main {
+	body {
 		background-color: var(--color-violet-dark-black);
 	}
 
