--- a/styles/register.css
+++ b/styles/register.css
@@ -268,7 +268,7 @@ a:hover {
 }
 
 @media (prefers-color-scheme: dark) {
-	main {
+	body {
 		background-color: var(--color-violet-dark-black);
 	}
 
